# Templates

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: gcc-arm-none-eabi.cmake  includeList.cmake  sourceList.cmake
cmake/mcu/: stm32f1.cmake  stm32wb.cmake
core/inc/: it.h  main.h
core/src/: it.c  main.c  msp.c
lib/BSP/inc/: clock.h  delay.h  gpio.h  uart.h
lib/BSP/src/: clock.c  delay.c  gpio.c  uart.c
lib/bsp/src/: clock.c  gpio.c  uart.c
tools/: get_mcu.sh
tools/svd/: STM32WB55_CM4.svd
wb55xx_template/: Makefile  wb55xx.cfg
wb55xx_template/.devcontainer/: Dockerfile  devcontainer.json
wb55xx_template/Core/src/: main.c
